--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,9 @@
 [*]
 charset = utf-8
-
-
-[*.pest]
 indent_style = space
+
+[*.{js,jsx,json}]
 indent_size = 4
 
-[*.toml]
-indent_style = space
+[*.{ts,tsx}]
 indent_size = 4
