--- a/projects/sum100-h5/package.json
+++ b/projects/sum100-h5/package.json
@@ -11,7 +11,7 @@
     },
     "dependencies": {
         "@fluent/bundle": "^0.19.1",
-        "sum100-ts": "workspace:*",
+        "sum100": "workspace:*",
         "fluent-vue": "^3.7.1",
         "katex": "^0.16.9",
         "vue": "^3.5.16",
