--- a/projects/sum100-h5/package.json
+++ b/projects/sum100-h5/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sum100-h5",
+    "name": "calculate100-h5",
     "version": "1.0.0",
     "description": "Sum-100 solver playground with Vue 3",
     "type": "module",
@@ -11,7 +11,7 @@
     },
     "dependencies": {
         "@fluent/bundle": "^0.19.1",
-        "sum100": "workspace:*",
+        "calculate100": "workspace:*",
         "fluent-vue": "^3.7.1",
         "katex": "^0.16.9",
         "vue": "^3.5.16",
