--- a/projects/sum100-ts/package.json
+++ b/projects/sum100-ts/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "sum100",
+    "name": "calculate100",
     "version": "0.0.0",
-    "description": "Solving sum-100 number puzzle games",
+    "description": "Solving calculate 100 number puzzle games",
+    "homepage": "https://github.com/oovm/calculate-100/tree/dev/projects/sum100-ts",
     "keywords": [
         "sum100",
         "puzzle",
@@ -17,7 +18,7 @@
     "exports": {
         ".": {
             "types": "./src/index.ts",
-            "require": "./dist/sum100.umd.js",
+            "require": "./dist/puzzle100.umd.js",
             "import": "./src/index.ts"
         }
     },
@@ -29,7 +30,6 @@
         "prepublishOnly": "pnpm run build"
     },
     "devDependencies": {
-        "jsdom": "^26.1.0",
         "vite": "^6.3.5",
         "vitest": "^3.1.4"
     }
